Open Response Record/Play/Stop/Delete/Time Controls
PT Story: https://www.pivotaltracker.com/story/show/181573717

[#181573717]

These changes improve the runtime UI for recording open response audio by increasing the button size for better accessibility and adding a time readout for recording and playback of audio. Also included are fixes for bugs related to the placement of the audio controls. The controls will now automatically move to the appropriate location in the textarea if the latter is resized, and text within the textarea will never overlap with the controls because the field will automatically increase in height to leave space for the controls no matter how much text is entered.

--- a/src/open-response/components/runtime.scss
+++ b/src/open-response/components/runtime.scss
@@ -14,23 +14,24 @@
   }
   button.audioControl {
     background: transparent;
-    border: solid 2px #313131;
-    border-radius: 100%;
+    border: none;
+    box-sizing: content-box;
     color: #313131;
-    font-size: 24px;
-    height: 28px;
-    margin-left: 5px;
-    padding: 0;
+    font-size: 34px;
+    height: 34px;
+    margin: 0;
+    padding: 5px;
     position: relative;
     transition: .2s;
-    width: 28px;
+    width: 34px;
 
     .buttonText {
       display: block;
+      height: 0;
       overflow: hidden;
       text-indent: 100%;
       white-space: nowrap;
-      width: 100%;
+      width: 0;
     }
 
     &:hover {
@@ -51,7 +52,7 @@
       animation: isActive .7s infinite;
       border-color: #0592af;
       color: #0592af;
-      cursor: pointer;
+      cursor: not-allowed;
     }
     &.disabled {
       cursor: not-allowed;
@@ -65,29 +66,55 @@
   .inputContainer {
     position: relative;
 
-    .recordButtonContainer {
+    &.audioEnabled {
+      padding-bottom: 71px !important;
+
+      .openResponseTextarea {
+        min-height: 170px !important;
+        padding-bottom: 71px !important;
+      }
+    }
+
+    .recordUIContainer {
+      align-items: center;
       bottom: 10px;
+      display: flex;
+      justify-content: flex-end;
       position: absolute;
       right: 10px;
       text-align: right;
-      width: 100%;
 
       .saveIndicator {
         animation: isActive .7s infinite;
         font-size: 14px;
       }
+      .audioControls {
+        align-items: center;
+        border: solid 1px #ccc;
+        border-radius: 8px;
+        display: flex;
+        margin-left: 5px;
+        text-align: right;
+      }
     }
 
-    .audioPlayer {
+    .audioPlayerUIContainer {
+      align-items: center;
       bottom: 10px;
+      display: flex;
+      justify-content: flex-end;
       position: absolute;
       right: 10px;
-      width: 100%;
   
       audio {
         display: none;
       }
       .audioControls {
+        align-items: center;
+        border: solid 1px #ccc;
+        border-radius: 8px;
+        display: flex;
+        margin-left: 5px;
         text-align: right;
       }
     }
